(env
 (_
  (flags
   (:standard -w @a-4-29-35-41-42-44-45-48-50-70 \ -strict-sequence))))

(executable
 (name hh_single_type_check)
 (modules hh_single_type_check)
 (modes exe byte_complete)
 (link_flags
  (:standard
   (:include dune_config/ld-opts.sexp)))
 (libraries
  camlp-streams
  client_get_definition
  client_highlight_refs
  code_actions_cli_lib
  count_imprecise_types
  custom_error_types
  decl_parser_options
  default_injector_config
  dep_hash_to_symbol
  direct_decl_parser
  direct_decl_utils
  gen_deps
  hhi
  hhi_get
  naming_ast_print
  memtrace
  package_info
  package_config
  parent
  rust_provider_backend_stubs
  refactor_sd
  remove_dead_unsafe_casts
  sdt_analysis
  server_env
  server_env_build
  server_code_actions_services
  server_file_outline
  server_find_refs
  server_go_to
  server_highlight_refs
  server_symbol_info_service_utils
  server_type_hierarchy
  shape_analysis
  sys_utils
  temp_file
  typing
  utils_core
  utils_multifile
  write_symbol_info))

(executable
 (name hh_single_ai)
 (modules hh_single_ai)
 (modes exe byte_complete)
 (link_flags
  (:standard
   (:include dune_config/ld-opts.sexp)))
 (libraries
  ai
  default_injector_config
  hhi
  sys_utils
  temp_file
  typing
  utils_core
  utils_multifile))

(executable
 (name hh_single_complete)
 (modules hh_single_complete)
 (modes exe byte_complete)
 (link_flags
  (:standard
   (:include dune_config/ld-opts.sexp)))
 (libraries
  default_injector_config
  file_content
  hhi
  search
  server_autocomplete_services
  server_search
  string
  sys_utils
  utils_core))

(executable
 (name hh_server)
 (modules hh_server)
 (modes exe byte_complete)
 (link_flags
  (:standard
   (:include dune_config/ld-opts.sexp)))
 (libraries
  client
  default_injector_config
  file_content
  gen_deps
  hhi
  hh_server_monitor
  parent
  server
  server_env
  sys_utils
  typing
  utils_core))

(executable
 (name hh_client)
 (modules hh_client)
 (modes exe byte_complete)
 (link_flags
  (:standard
   (:include dune_config/ld-opts.sexp)))
 (libraries
  client
  default_injector_config
  file_content
  gen_deps
  hhi
  hh_server_monitor
  lwt_utils
  parent
  server
  server_env
  sys_utils
  typing
  utils_core
  utils_exit))

(library
 (name full_fidelity_parse_args)
 (wrapped false)
 (modules fullFidelityParseArgs)
 (libraries global_options parser_options parser))

(executable
 (name hh_parse)
 (modes exe byte_complete)
 (modules hh_parse generate_hhi)
 (link_flags
  (:standard
   (:include dune_config/ld-opts.sexp)))
 (libraries
  default_injector_config
  full_fidelity_parse_args
  global_config
  hackfmt
  parser
  utils_core))

(executable
 (name hh_single_decl)
 (modes exe byte_complete)
 (modules hh_single_decl)
 (link_flags
  (:standard
   (:include dune_config/ld-opts.sexp)))
 (libraries
  decl_parser_options
  decl_provider
  default_injector_config
  direct_decl_parser
  file_provider
  ocamlrep_marshal_ffi
  package_info
  ppxlib.print_diff
  provider_context
  provider_utils
  server_env
  utils_core))

(executable
 (name hackfmt)
 (modules hackfmt)
 (modes exe byte_complete)
 (link_flags
  (:standard
   (:include dune_config/ld-opts.sexp)))
 (libraries
  default_injector_config
  folly_stubs
  hackfmt
  hackfmt_debug
  utils_config_file
  utils_ocaml_overrides))

(executable
 (name generate_full_fidelity)
 (modules generate_full_fidelity generate_full_fidelity_data)
 (link_flags
  (:standard
   (:include dune_config/ld-opts.sexp)))
 (libraries core_kernel str parser_schema collections utils_core))

 (executable
  (name hh_single_fanout)
  (modules hh_single_fanout)
  (modes exe byte_complete)
  (link_flags
   (:standard
    (:include dune_config/ld-opts.sexp)))
 (libraries
    decl_redecl_service
    default_injector_config
    dep_hash_to_symbol
    direct_decl_service
    naming_table
    typing_check_job
    typing_deps)
  (preprocess
    (pps ppx_deriving.std)))

(alias
 (name exe)
 (deps
  hackfmt.exe
  hh_client.exe
  hh_fanout/hh_fanout.exe
  hh_parse.exe
  hh_server.exe
  hh_single_decl.exe
  hh_single_type_check.exe
  hh_single_complete.exe
  hh_single_ai.exe
  hh_single_fanout.exe
  ai/zoncolan.exe))

(alias
 (name hh)
 (deps hh_server.exe hh_client.exe))

(alias
 (name single)
 (deps hh_single_type_check.exe))

(alias
 (name debug-single)
 (deps hh_single_type_check.bc.exe))

(alias
 (name debug)
 (deps
  hackfmt.bc.exe
  hh_client.bc.exe
  hh_fanout/hh_fanout.bc.exe
  hh_parse.bc.exe
  hh_server.bc.exe
  hh_single_type_check.bc.exe
  hh_single_complete.bc.exe
  hh_single_fanout.bc.exe
  hh_single_ai.bc.exe))
