[package]
name = "hack_integration_tests"
version = "3.49.0"

[[bin]]
name = "test_facts_parse"
path = "rust/facts_parse.rs"

# TODO: add more tests as [[bin]]s here

[dependencies]
facts_rust = { path = "../src/facts", package = "hack_facts" }
oxidized = { path = "../src/oxidized", package = "hack_oxidized" }
clap = "^2.33.0"
