[package]
name = "hack_integration_tests"
version = "3.49.0"
edition = "2018"

[[bin]]
name = "test_facts_parse"
path = "rust/facts_parse.rs"

# TODO: add more tests as [[bin]]s here

[dependencies]
facts_rust = { path = "../src/facts/cargo/facts_rust", package = "facts_rust" }
oxidized = { path = "../src/oxidized", package = "oxidized" }
clap = "^2.33.0"
